--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "metalsmith": "^2.2.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-filenames": "^1.0.0",
     "metalsmith-html-minifier": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-in-place": "^1.4.4",
