--- a/package.json
+++ b/package.json
@@ -5,55 +5,58 @@
     "name": "ViZhe (Barsik^)",
     "email": "i@hoppas.ru"
   },
-  "main": "gulpfile.js",
+  "main": "metalsmith.js",
+  "scripts": {
+    "start": "babel-node metalsmith.js",
+    "dev": "NODE_ENV=develompent npm start",
+    "prod": "NODE_ENV=production npm start"
+  },
   "devDependencies": {
+    "autoprefixer": "^6.4.1",
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.14.3",
-    "del": "^2.2.2",
+    "css-loader": "^0.25.0",
+    "cssnano": "^3.7.4",
     "ejs": "^2.5.1",
     "eslint": "^3.0.1",
     "eslint-config-airbnb-base": "^5.0.2",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.13.0",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-base64": "^0.1.3",
-    "gulp-changed": "^1.3.2",
-    "gulp-css-url-adjuster": "^0.2.3",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-group-css-media-queries": "^1.1.0",
-    "gulp-header": "^1.8.8",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-plumber": "^1.1.0",
-    "gulp-stylint": "^3.0.0",
-    "gulp-stylus": "^2.5.0",
-    "gulp-util": "^3.0.7",
-    "gulp-webpack": "^1.5.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "group-css-media-queries": "^1.4.1",
     "markdown-it-attrs": "^0.7.0",
     "metalsmith": "^2.2.0",
     "metalsmith-assets": "^0.1.0",
+    "metalsmith-beautify": "^0.1.0",
+    "metalsmith-browser-sync": "^1.1.1",
+    "metalsmith-changed": "^3.0.0",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-data-markdown": "0.0.3",
     "metalsmith-filenames": "^1.0.0",
     "metalsmith-html-minifier": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
+    "metalsmith-imagemin": "^2.0.0",
     "metalsmith-in-place": "^1.4.4",
     "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdownit": "^0.4.0",
+    "metalsmith-metadata": "0.0.4",
     "metalsmith-paths": "^2.1.2",
     "metalsmith-permalinks": "^0.5.0",
+    "ms-webpack": "^1.0.2",
+    "postcss-loader": "^0.13.0",
     "postcss-svg": "^1.0.6",
-    "poststylus": "^0.2.3",
-    "yargs": "^5.0.0"
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
+    "url-loader": "^0.5.7"
   },
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.1.0"
+    "jquery": "^2.2.4"
   }
 }
