--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "babel-node metalsmith.js",
     "dev": "NODE_ENV=develompent npm start",
-    "prod": "NODE_ENV=production npm start"
+    "prod": "NODE_ENV=production npm start",
+    "test": "stylint ./source/css/ && eslint ./source/js/"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
