--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-loader": "^0.13.0",
     "postcss-svg": "^1.0.6",
     "style-loader": "^0.13.1",
+    "stylint": "^1.5.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7"
