--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.0.1",
+    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "group-css-media-queries": "^1.4.1",
